--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
     "axios": "^1.7.4",
+    "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
